--- a/PokerTables/Base.lproj/LaunchScreen.storyboard
+++ b/PokerTables/Base.lproj/LaunchScreen.storyboard
@@ -18,25 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="Eff-CP-YTP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homebig.png" translatesAutoresizingMaskIntoConstraints="NO" id="Eff-CP-YTP">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Poker Tables" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRw-2Y-PtO">
-                                <rect key="frame" x="52" y="380" width="310" height="136"/>
-                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="40"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="FUP-HX-Wgr">
+                                <rect key="frame" x="0.0" y="291" width="414" height="287"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="MRw-2Y-PtO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="336" id="61e-XI-d3w"/>
                             <constraint firstAttribute="trailing" secondItem="Eff-CP-YTP" secondAttribute="trailing" id="PWl-hu-Bf4"/>
                             <constraint firstItem="Eff-CP-YTP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="RcX-BU-WeF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MRw-2Y-PtO" secondAttribute="trailing" constant="52" id="UM7-Os-mfM"/>
-                            <constraint firstItem="MRw-2Y-PtO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="52" id="ZWS-xj-PAE"/>
                             <constraint firstItem="Eff-CP-YTP" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="g8U-cP-J7I"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MRw-2Y-PtO" secondAttribute="bottom" constant="346" id="jXb-5A-HHD"/>
                             <constraint firstAttribute="bottom" secondItem="Eff-CP-YTP" secondAttribute="bottom" id="u38-n4-1AG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -48,6 +42,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch.JPG" width="3264" height="2448"/>
+        <image name="homebig.png" width="2000" height="4000"/>
+        <image name="logo.png" width="540" height="398"/>
     </resources>
 </document>
